Fix spacing error introduced when editing chano9.png

--- a/src/scss/styles-unprefixed.css
+++ b/src/scss/styles-unprefixed.css
@@ -120,7 +120,7 @@ p.center {
     justify-content: center; }
     .lyric-container.lyric-container-2 .bubble {
       align-self: flex-start;
-      margin-right: -80px; }
+      margin-right: -50px; }
     .lyric-container.lyric-container-2 .illustration {
       align-self: flex-end;
       margin-bottom: -50px;
