--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -162,7 +162,7 @@ p.center {
 
         .bubble {
             align-self: flex-start;
-            margin-right: -80px;
+            margin-right: -50px;
         }
 
         .illustration {
